--- a/.github/workflows/test-diff.yaml
+++ b/.github/workflows/test-diff.yaml
@@ -11,5 +11,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Test with Maven
-      run: git diff --name-only ${{ github.event.before }} ${{ github.sha }}
+    - id: files
+      uses: jitterbit/get-changed-files@v1
+    - run: |
+        for changed_file in ${{ steps.files.outputs.all }}; do
+          echo "Do something with this ${changed_file}."
+        done
