--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: Checkout Repository
         run: |
-          echo ${{ github.ref_name }}
+          echo ${{ github.head_ref }}
