--- a/.github/workflows/test-outputs.yaml
+++ b/.github/workflows/test-outputs.yaml
@@ -11,9 +11,9 @@ jobs:
         id: step1
         run: echo "VALUE_FROM_STEP1=value1" >> $GITHUB_OUTPUT
       - name: Display value from step 1
-        run: echo "Values from step1 $VALUE_FROM_STEP1"
+        run: echo "Values from step1 ${{ steps.step1.outputs.VALUE_FROM_STEP1 }}"
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-        - run: echo ${{ needs.job1.outputs.VALUE_FROM_STEP1 }}
+        - run: echo ${{ needs.job1.outputs.VALUE_FROM_JOB1 }}
